--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "apollo-server-core": "^3.10.1",
     "apollo-server-express": "^3.10.1",
+    "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
